--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "priority-task-queue",
+  "name": "priority-worker-runner",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
