--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "priority-worker-runner",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf ./build && tsc --project ./",
+    "demo": "ts-node ./demo/basic.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  }
 }
